optimizacion del codigo